--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./Assets/CSS/@mediascreen991px.css">
     <link rel="stylesheet" href="./Assets/CSS/@mediascreen746px.css">
     <link rel="stylesheet" href="./Assets/CSS/@mediascreen600px.css">
+    <link rel="stylesheet" href="./Assets/CSS/@mediascreen430px.css">
     <link rel="stylesheet" href="./Assets/Font-Awesome/fontawesome-free-6.5.1-web/css/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
 </head>
